--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.2",
     "feather-icons-react": "^0.6.2",
     "react": "18.1.0",
+    "react-hook-form": "^7.42.1",
     "react-native": "0.70.5",
     "react-native-feather": "^1.1.2",
     "react-native-safe-area-context": "4.4.1",
