--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "expo-image-picker": "~14.0.2"
+    "expo-image-picker": "~14.0.2",
+    "expo-av": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
